syntax = "proto3";

package bytebase.store;

import "store/common.proto";

option go_package = "generated-go/store";

message DeprecatedMaskingPolicy {
  repeated DeprecatedMaskData mask_data = 1;
}

message DeprecatedMaskData {
  string schema = 1;
  string table = 2;
  string column = 3;
  MaskingLevel masking_level = 4;
  string full_masking_algorithm_id = 5;
  string partial_masking_algorithm_id = 6;
}
